--- a/.github/workflows/build_doc.yml
+++ b/.github/workflows/build_doc.yml
@@ -25,7 +25,7 @@ jobs:
         run: 'npm install -g typedoc'
         
       - name: Build
-        run: 'cd $GITHUB_WORKSPACE/interruptor && npm install && typedoc  --name Interruptor --out $GITHUB_WORKSPACE/public --entryPoint ./index.linux.aarch32.ts --entryPoint ./index.linux.arm64.ts --entryPoint ./index.linux.x64.ts --entryPointStrategy expand ./src' 
+        run: 'cd $GITHUB_WORKSPACE/interruptor && npm install && typedoc  --name Interruptor --out $GITHUB_WORKSPACE/public --entryPoints ./index.linux.aarch32.ts --entryPoints ./index.linux.arm64.ts --entryPoints ./index.linux.x64.ts --entryPointStrategy expand ./src' 
           
       - name: Cleanup interruptor
         run: 'rm -rf $GITHUB_WORKSPACE/interruptor'
